# g-plot

./: CMakeLists.txt  Makefile  README.md  cudaTest.cu  sph_shabal.cu  sph_shabal.h  test.cpp
plot/: CMakeLists.txt
plot/include/: g_plot.h  g_plotter.h  sph_shabal.cuh
plot/src/: g_plot.cu  g_plotter.c
shabal/: CMakeLists.txt
shabal/include/: g_plot.h  sph_shabal.cuh  sph_swap.h  sph_types.h
shabal/src/: g_plot.cu  g_plotter.c  sph_plotter.cu  sph_shabal.cu
tests/: test_plot.cpp  test_shabal.cpp  test_shabal.h
